rename dist files to 3dstreet-editor

--- a/examples/index.html
+++ b/examples/index.html
@@ -60,6 +60,6 @@
       <a-entity id="rightHand" laser-controls="hand: right"></a-entity>
     </a-scene>
 
-    <script src="../dist/aframe-inspector.js"></script>
+    <script src="../dist/3dstreet-editor.js"></script>
   </body>
 </html>
