--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         background-position-x: center;
         background-position-y: center;
       } 
+
+      .toggle-edit, .a-inspector-loader {
+        visibility: hidden;
+      }
     </style>
 
     <style>
@@ -96,7 +100,7 @@
     gltf-model="dracoDecoderPath: https://www.gstatic.com/draco/v1/decoders/;"
     gridhelper="size:1000;divisions:50;colorGrid:#c900c9;colorCenterLine:#c900c9;"
     background="color: black"
-    timed-inspector="5"
+    timed-inspector="3"
     inspector="url: dist/3dstreet-editor.js"
     loading-screen="dotsColor: #c900c9; backgroundColor: black">
       <a-assets>
@@ -115,7 +119,7 @@
 
       <a-entity id="cameraRig" position="0 500 0" rotation="-90 0 0">
         <a-entity id="camera" camera="far: 1000; zoom: 20" wasd-controls="enabled: false" 
-        animation__zoomin="property: camera.zoom; from: 1; to: 22; dur: 7000; easing: easeInOutQuad; "
+        animation__zoomin="property: camera.zoom; from: 1; to: 22; dur: 6000; easing: easeOutQuad; "
         ></a-entity>
         <a-entity id="leftHand" hand-controls="hand: left; handModelStyle: lowPoly; color: #ccffcc" teleport-controls="cameraRig: #cameraRig; button: trigger"></a-entity>
         <a-entity id="rightHand" hand-controls="hand: right; handModelStyle: lowPoly; color: #ccffcc" teleport-controls="cameraRig: #cameraRig; button: trigger"></a-entity>
@@ -138,10 +142,10 @@
       <!-- <figure class="image is-128x128">
         <img src="assets/3dstreet.png">
       </figure>       -->
-      <p class="tooltip is-tooltip-left" data-tooltip="✅ = AFRAME global variable exists"><span id="app-loaded" class="spinner" style="position: relative;">❌</span> #1 Load and Start App</p>
-      <p class="tooltip is-tooltip-left" data-tooltip="✅ = street json has a value"><span id="street-json" class="spinner" style="position: relative;">❌</span> #2 Import Street from Streetmix to 3DStreet.co</p>
-      <p class="tooltip is-tooltip-left" data-tooltip="✅ = init scene = true?"><span id="init-scene">❌</span> #3 Create 3D Scene from 2D Segments</p>
-      <p class="tooltip is-tooltip-left" data-tooltip="✅ = See if AFRAME.INSPECTOR exists"><span id="inspector-exists" style="position: relative;">❌</span> #4 Load “Plan View” in the 3DStreet.co Editor</p>
+      <p class="tooltip is-tooltip-left" data-tooltip="✅ = AFRAME global variable exists"><span id="app-loaded" class="spinner" style="position: relative;">⏳</span> #1 Load App</p>
+      <p class="tooltip is-tooltip-left" data-tooltip="✅ = street json has a value"><span id="street-json" class="spinner" style="position: relative;">⏳</span> #2 Import Street from Streetmix</p>
+      <p class="tooltip is-tooltip-left" data-tooltip="✅ = init scene = true?"><span id="init-scene">⏳</span> #3 Create 3D Scene from Street Segments</p>
+      <p class="tooltip is-tooltip-left" data-tooltip="✅ = See if AFRAME.INSPECTOR exists"><span id="inspector-exists" style="position: relative;">⏳</span> #4 Load “Plan View” in Editor</p>
       <p><a onclick="AFRAME.scenes[0].components['screenshot'].capture('perspective')" class="button is-primary">Screenshot</a></p>
     </div>
 
