--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         init: function() {
           this.data // seconds
           setTimeout( function () {
+            document.querySelector('#purpleGrid').setAttribute('visible',false);
             window.postMessage('INJECT_AFRAME_INSPECTOR')
             document.querySelector("#inspector-exists").classList.add("spinner");
           }, this.data * 1000)
@@ -130,7 +131,6 @@
     renderer="colorManagement: true; highRefreshRate: true; foveationLevel: 3; physicallyCorrectLights: true; logarithmicDepthBuffer: false;"
     fogoff="type: linear; color: #D5C69B; far: 200"
     gltf-model="dracoDecoderPath: https://www.gstatic.com/draco/v1/decoders/;"
-    gridhelper="size:1000;divisions:50;colorGrid:#c900c9;colorCenterLine:#c900c9;"
     background="color: black"
     timed-inspector="3"
     inspector="url: dist/3dstreet-editor.js"
@@ -149,6 +149,7 @@
 
       </a-assets>
 
+      <a-entity id="purpleGrid" position="0 2 0" gridhelper="size:1000;divisions:50;colorGrid:#c900c9;colorCenterLine:#c900c9;"></a-entity>
       <a-entity id="cameraRig" position="0 500 0" rotation="-90 0 0">
         <a-entity id="camera" camera="far: 1000; zoom: 20" wasd-controls="enabled: false" 
         animation__zoomin="property: camera.zoom; from: 1; to: 22; dur: 6000; easing: easeOutQuad; "
@@ -178,8 +179,8 @@
       <p class="tooltip is-tooltip-left" data-tooltip="✅ = street json has a value"><span id="street-json" class="spinner" style="position: relative;">⏳</span> #2 Import Street from Streetmix</p>
       <p class="tooltip is-tooltip-left" data-tooltip="✅ = init scene = true?"><span id="init-scene">⏳</span> #3 Create 3D Scene from Street Segments</p>
       <p class="tooltip is-tooltip-left" data-tooltip="✅ = See if AFRAME.INSPECTOR exists"><span id="inspector-exists" style="position: relative;">⏳</span> #4 Load “Plan View” in Editor</p>
-      <p><a onclick="AFRAME.scenes[0].components['screenshot'].capture('perspective')" class="button is-primary">Screenshot</a></p>
-      <p><a onclick="captureToEditor()" class="button is-primary">Screenshot with Editor</a></p>
+      <!-- <p><a onclick="AFRAME.scenes[0].components['screenshot'].capture('perspective')" class="button is-primary">Screenshot</a></p>
+      <p><a onclick="captureToEditor()" class="button is-primary">Screenshot with Editor</a></p> -->
     </div>
 
   </body>
