--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
     <a-scene 
     renderer="colorManagement: true; highRefreshRate: true; foveationLevel: 3; physicallyCorrectLights: true; logarithmicDepthBuffer: false;"
     fogoff="type: linear; color: #D5C69B; far: 200"
-    gltf-model="dracoDecoderPath: https://www.gstatic.com/draco/v1/decoders/;"
+    gltf-model="dracoDecoderPath: https://www.gstatic.com/draco/versioned/decoders/1.4.3/"
     background="color: black"
     timed-inspector="3"
     inspector="url: dist/3dstreet-editor.js"
