--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>3DStreet</title>
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@52136de6a863f32d8cb806b65c3c3223f6b0f8a3/dist/aframe-master.min.js"></script>
-    <script src="https://github.3d.st/dist/aframe-street-component.js"></script>
+    <script src="https://github.3dstreet.org/dist/aframe-street-component.js"></script>
     <script src="https://raw.githack.com/dbradleyfl/aframe-gridhelper/master/dist/aframe-gridhelper-component.min.js"></script> 
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
